visible fix

--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,10 @@ html {
 
   visibility: hidden;
   opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s;
 }
 
 .nav-back.on {
-  transition: visibility 0.5s, opacity 0.5s;
   visibility: visible;
   opacity: 0.7;
 }
@@ -87,12 +87,13 @@ html {
   line-height: 1;
   text-align: center;
 
+  transition: visibility 0.5s, opacity 0.5s;
   visibility: hidden;
   opacity: 0;
 }
 
 .nav.on {
-  transition: visibility 0.5s, opacity 0.5s;
+  display: flex;
   visibility: visible;
   opacity: 1;
 }
